# geopeek

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev.ps1  environment.yml  pyproject.toml  requirements.txt
conda/: meta.yaml
geopeek/: __init__.py  __main__.py  cli.py  main.py  tui.py
geopeek/core/: __init__.py  detectors.py  main.py  utils.py
geopeek/handlers/: __init__.py  base.py  gdb_handler.py  handler.py  raster_handler.py  shapefile_handler.py
geopeek/output/: __init__.py  json_printer.py  rich_printer.py
geopeek/tui/: __init__.py  app.py  theme.py
geopeek/tui/styles/: app.tcss  index.tcss
geopeek/tui/widgets/: __init__.py  data_panel.py  explorer.py  fields_panel.py  vim_table.py
src/geopeek/: __init__.py  config.py  main.py
tests/: test_cli.py  test_handlers.py  test_tui.py  test_vim_motions.py
